<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#123"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="32"
                    android:textColor="@color/color_white"
                    android:textSize="100sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="8dp"
                    android:gravity="center"
                    android:text="Heavy rain"
                    android:textColor="@color/color_white"
                    android:textSize="20sp"
                    tools:targetApi="o" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <!--Center layout-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        tools:targetApi="o">

                        <TextView
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".3"
                            android:drawableStart="@drawable/ic_arrow_downward_blue_400_18dp"
                            android:drawableLeft="@drawable/ic_arrow_downward_blue_400_18dp"
                            android:drawablePadding="4dp"
                            android:text="26"
                            android:textColor="@color/color_white"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".3"
                            android:drawableStart="@drawable/ic_arrow_upward_red_800_18dp"
                            android:drawableLeft="@drawable/ic_arrow_upward_red_800_18dp"
                            android:drawablePadding="4dp"
                            android:text="36"
                            android:textColor="@color/color_white" />

                        <TextView
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".4"
                            android:text="Feels: 36"
                            android:textColor="@color/color_white" />


                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/Image_size_small"
                        android:layout_height="@dimen/Image_size_small"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/wind"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="SE 0.8 M/S"
                        android:textColor="@color/color_white"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/wind"
                        android:textColor="@color/color_light_white"
                        tools:targetApi="o" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/Image_size_small"
                        android:layout_height="@dimen/Image_size_small"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/water_drop"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="SE 0.8 M/S"
                        android:textColor="@color/color_white"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textColor="@color/color_light_white"
                        tools:targetApi="o" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="@dimen/Image_size_small"
                        android:layout_height="@dimen/Image_size_small"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/eye"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="SE 0.8 M/S"
                        android:textColor="@color/color_white"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/visibility"
                        android:textColor="@color/color_light_white"
                        tools:targetApi="o" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight=".5"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/Image_size_small"
                        android:layout_height="@dimen/Image_size_small"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/speed"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="SE 0.8 M/S"
                        android:textColor="@color/color_white"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/pressure"
                        android:textColor="@color/color_light_white"
                        tools:targetApi="o" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/Image_size_small"
                        android:layout_height="@dimen/Image_size_small"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/uv_pro"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="SE 0.8 M/S"
                        android:textColor="@color/color_white"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/uv_index"
                        android:textColor="@color/color_light_white"
                        tools:targetApi="o" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:src="@drawable/beach"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="4dp"
                        android:gravity="center"
                        android:text="SE 0.8 M/S"
                        android:textColor="@color/color_white"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sunrise_sunset"
                        android:textColor="@color/color_light_white"
                        tools:targetApi="o" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
